--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,6 @@ classifiers = [
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: Implementation :: CPython',
-    "Topic :: Database",
     'Topic :: Software Development',
     'Topic :: Software Development :: Libraries :: Python Modules',
     'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
@@ -51,7 +50,7 @@ include = [
 ]
 
 [project.optional-dependencies]
-pytest = [
+test = [
     'ruff',
     'pytest',
     'pytest-cov',
