--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.12'
-      - name: Install test
+      - name: Install FeretUI
         run: pip install .[test]
       - name: Run ruff check
         run: ruff check feretui
