--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ build:
 sphinx:
    configuration: docs/conf.py
 
-# # Dependencies required to build your docs
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+# Dependencies required to build your docs
+python:
+   install:
+   - requirements: docs-requirements.txt
