--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,21 +25,17 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Update pip
         run: pip install -U pip
-      - name: Install lcov
-        run: pip install coverage-lcov
       - name: Install FeretUI
         run: pip install .[test]
       - name: Run tests
-        run: pytest feretui
-      - name: Generate lcov
-        run: coverage-lcov
+        run: pytest --cov feretui --cov-report term-missing --cov-report lcov
       - name: Coveralls
         uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
           flag-name: ${{ github.job }}
-          path-to-lcov: lcov.info
+          path-to-lcov: converage.lcov
 
   finish:
     needs: test
@@ -50,5 +46,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
-          path-to-lcov: lcov.info
+          path-to-lcov: converage.lcov
           format: lcov
