--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,38 +16,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - name: Update pip
         run: pip install -U pip
-      - name: Install lcov
-        run: pip install coverage-lcov
       - name: Install FeretUI
-        run: pip install .[test]
+        run: pip install -e .[test]
       - name: Run tests
-        run: pytest feretui
-      - name: Generate lcov
-        run: coverage-lcov
+        run: pytest --cov feretui --cov-report term-missing --cov-report lcov
       - name: Coveralls
-        uses: coverallsapp/github-action@1.1.3
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
           flag-name: ${{ github.job }}
-          path-to-lcov: lcov.info
+          path-to-lcov: coverage.lcov
 
   finish:
-    needs: [test]
-    runs-on: ubuntu-20.04
+    needs: test
+    runs-on: ubuntu-latest
     steps:
       - name: Coveralls Finished
-        uses: coverallsapp/github-action@1.1.3
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
-          path-to-lcov: lcov.info
+          path-to-lcov: coverage.lcov
+          format: lcov
