--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,5 @@ max-line-length = 80
 exclude = log/*,parts/*,docs/*,*.egg-info
 max-complexity = 10
 
-# [pytest]
-# addopts = -ra -vv --cov=feretui --cov-report=term-missing
+[pytest]
+addopts = -ra -vv --cov=feretui --cov-report=term-missing
