--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ htmlcov/
 .nox/
 .coverage
 .coverage.*
+coverage.lcov
 .cache
 nosetests.xml
 coverage.xml
@@ -53,7 +54,6 @@ cover/
 
 # Translations
 *.mo
-*.pot
 
 # Django stuff:
 *.log
