--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 version = "0.0.1"
 license = { text = "MPL2" }
-requires-python = ">=3.9"
+requires-python = ">3.9"
 dependencies = [
     'lxml',
     'polib',
