--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 version = "0.0.1"
 license = { text = "MPL2" }
-requires-python = ">=3.9"
+requires-python = ">3.9"
 dependencies = [
     'lxml',
     'polib',
@@ -26,7 +26,6 @@ keywords = [
 ]
 classifiers = [
     'Intended Audience :: Developers',
-    'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
