--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,8 @@ test = [
 [project.scripts]
 export-feretui-catalog = "feretui:scripts.export_catalog"
 
-[project.entry-points."feretui.static"]
-feretui = "feretui.feretui:import_feretui_statics"
+[project.entry-points."feretui.addons"]
+feretui = "feretui.feretui:import_feretui_addons"
 
 [tool.ruff]
 # Set the maximum line length to 79.
