Added body and querystring deserializer
The deserializer is used in the Request class. They are filled
by the action_validator.

--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ exclude = log/*,parts/*,docs/*,*.egg-info
 max-complexity = 10
 
 [pytest]
-addopts = -ra -vv --cov=feretui --cov-report=term-missing
+addopts = --cov=feretui --cov-report=term-missing
