compress static file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     'WTForms-Components',
     'password-validator',
     'multidict',
+    'jac',
 ]
 dynamic = ["readme"]
 keywords = [
