--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,6 +23,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install lessc
+        run:
+          - sudo apt update
+          - sudo apt install node-less
       - name: Update pip
         run: pip install -U pip
       - name: Install FeretUI
