--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,8 +25,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install lessc
         run:
-          - sudo apt update
-          - sudo apt install node-less
+          sudo apt update
+          sudo apt install node-less
       - name: Update pip
         run: pip install -U pip
       - name: Install FeretUI
