--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,9 +24,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install lessc
-        run:
-          sudo apt update
-          sudo apt install node-less
+        run: sudo apt update & sudo apt install node-less
       - name: Update pip
         run: pip install -U pip
       - name: Install FeretUI
