--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,10 +23,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - uses: actions/setup-node@v4
+         node-version: 'latest'
       - name: Install lessc
-        run: |
-          sudo apt update
-          sudo apt install node-less yui-compressor -y
+        run: sudo npm install -g less
       - name: Update pip
         run: pip install -U pip
       - name: Install FeretUI
