--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,12 @@ jobs:
         python-version: ['3.10', '3.11', '3.12']
     steps:
       - uses: actions/checkout@v3
+      - name: Set up npm
+        uses: actions/setup-node@v4
+        with:
+         node-version: '*'
+      - name: Install lessc
+        run: sudo npm install -g less
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
