--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         python-version: ['3.10', '3.11', '3.12']
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up npm
         uses: actions/setup-node@v4
         with:
@@ -26,7 +26,7 @@ jobs:
       - name: Install lessc
         run: sudo npm install -g less
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Update pip
@@ -41,7 +41,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
           flag-name: ${{ github.job }}
-          path-to-lcov: coverage.lcov
+          file: coverage.lcov
+          format: lcov
 
   finish:
     needs: test
